加入了注册登陆

--- a/workFaceSurvey/WebRoot/WEB-INF/web.xml
+++ b/workFaceSurvey/WebRoot/WEB-INF/web.xml
@@ -19,7 +19,7 @@
 	</context-param>
 	<context-param>
 		<param-name>webAppRootKey</param-name>
-		<param-value>bigdata.root</param-value>
+		<param-value>workFaceSurvey.root</param-value>
 	</context-param>
 	<listener>
 		<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
